# PharmaForm

./: CHANGELOG.md  FILE_INTEGRITY_GUIDE.md  HPRAParser.spec  QUALITY_REPORT_EXAMPLES.md  QUALITY_REPORT_GUIDE.md  README.md  pyproject.toml
data/input/: sample_medicines.xml
data/output/: quality_report_20251019_183627.xlsx  quality_report_20251019_184608.txt  quality_report_20251019_190555.xlsx  sample_medicines.json
hpra_parser/: __init__.py  cli.py  converter.py  integrity.py  quality_report.py
trigger/: build_bundle.ps1  run_parser.cmd  run_parser.py
