[project]
name = "hpra-xml-parser"
version = "0.1.0"
description = "Convert HPRA human medicines XML exports into clean JSON."
authors = [{ name = "HPRA Parser" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
hpra-xml-parser = "hpra_parser.cli:main"

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"
